# traits

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Traits.h  clib.json  coverage.sh  package.json  run_examples.sh
examples/: build.cmake  example.c  main.c
include/: traits.h
include/traits/: traits.h
sources/: traits.h
src/: traits.c  traits.h
test/: main.c  test_traits.c
tests/: build.cmake  it_works.c
